# UnComicTranslate

./: README.md  controller.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
app/controllers/: projects.py
app/ui/: main_window.py
app/ui/canvas/: save_renderer.py  text_item.py
app/ui/settings/: settings_page.py  text_rendering_page.py
pipeline/: batch_processor.py  webtoon_batch_processor.py
